--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,10 @@ MAIN - BASKET
   margin-top: 13px;
 }
 
+.basket__cards {
+  margin-bottom: 20px;
+}
+
 .basket__card {
   position: relative;
   padding: 18px;
@@ -264,12 +268,7 @@ MAIN - BASKET
   cursor: pointer;
 }
 
-.minus,
-.plus {
-  cursor: pointer;
-}
-
-.basket__card-img-good {
+.basket__card__good {
   display: flex;
   flex-direction: row;
 }
@@ -278,7 +277,7 @@ MAIN - BASKET
   width: 146px;
 }
 
-.basket__card-good {
+.basket__card__info {
   margin-top: 76px;
   margin-left: 24px;
 }
@@ -289,16 +288,18 @@ MAIN - BASKET
   color: var(--text);
 }
 
-.basket__card__price {
+.basket__card__price-one {
   margin-top: 12px;
   font-weight: 600;
   font-size: 15px;
   color: var(--text-gray);
 }
 
-.card-amount-price {
+.basket__card__total {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  margin-right: 10px;
 }
 
 .basket__card__amount {
@@ -309,20 +310,18 @@ MAIN - BASKET
   gap: 24px;
 }
 
-.basket__card-amount-total {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-right: 10px;
+.minus,
+.plus {
+  cursor: pointer;
 }
 
-.amount {
+.card-amount {
   font-weight: 600;
   font-size: 17px;
   color: var(--black);
 }
 
-.basket__card__total {
+.basket__card__price-total {
   font-weight: 600;
   font-size: 15px;
   color: var(--text);
